
<resources>
<string name="app_name">MyCMS</string>
<string name="hello_world">Hello world!</string>
<string name="menu_settings">Settings</string>
<string name="title_activity_main">Broadcast Tutorial</string>
<string name="notificationtitle">Complaint</string>
<string name="lbltitle">"Title : FIR(First Information Report)"</string>
<string name="lbltext"></string>
<string name="BroadcastReceiver">You will receive the status of the complaint. Click to receive notification.</string>
<string name="wifioff">Submit</string>
<string name="wifion">Submit</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="auth_failed">Authentication failed, check your email and password or check your internet connection!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
<string name="text_login_successful">sucess</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>

    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>

<string name="prompt_password">Password</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
<string name="complaint">Complaint Here</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

</resources>
